--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,15 +7,24 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
+    buildFeatures {
+        compose true
+    }
+
+    dataBinding {
+        enabled = true
+    }
+
     defaultConfig {
         applicationId "com.zaincheema.turf"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
 
     buildTypes {
         release {
@@ -30,6 +39,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    composeOptions {
+        kotlinCompilerVersion "1.4.32"
+        kotlinCompilerExtensionVersion "1.0.0-beta05"
+    }
 }
 
 dependencies {
@@ -39,6 +53,27 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.squareup.retrofit2:retrofit:2.0.9'
+    implementation 'com.squareup.moshi:moshi:1.12.0'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'androidx.compose.ui:ui:1.0.0-beta05'
+    // Tooling support (Previews, etc.)
+    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta05'
+    // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
+    implementation 'androidx.compose.foundation:foundation:1.0.0-beta05'
+    // Material Design
+    implementation 'androidx.compose.material:material:1.0.0-beta05'
+    // Material design icons
+    implementation 'androidx.compose.material:material-icons-core:1.0.0-beta05'
+    implementation 'androidx.compose.material:material-icons-extended:1.0.0-beta05'
+    // Integration with activities
+    implementation 'androidx.activity:activity-compose:1.3.0-alpha07'
+    // Integration with ViewModels
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha04'
+    // Integration with observables
+    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta05'
+    implementation 'androidx.compose.runtime:runtime-rxjava2:1.0.0-beta05'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
