--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,10 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
-    buildFeatures {
-        compose true
+    dataBinding {
+        enabled true
     }
 
-    dataBinding {
-        enabled = true
-    }
 
     defaultConfig {
         applicationId "com.zaincheema.turf"
@@ -39,10 +36,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        compose true
+    }
 
     composeOptions {
         kotlinCompilerVersion "1.4.32"
-        kotlinCompilerExtensionVersion "1.0.0-beta05"
+        kotlinCompilerExtensionVersion compose_version
     }
 }
 
@@ -53,7 +53,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.squareup.retrofit2:retrofit:2.0.9'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.moshi:moshi:1.12.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.compose.ui:ui:1.0.0-beta05'
