--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -47,14 +47,19 @@ android {
 }
 
 dependencies {
-
+    // Core
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    // Retrofit + Moshi
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.moshi:moshi:1.12.0'
+    implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
+    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
+    // RxJava 3
+    implementation 'io.reactivex.rxjava3:rxjava 3.0.13-RC2'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.compose.ui:ui:1.0.0-beta05'
     // Tooling support (Previews, etc.)
