--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -47,8 +48,9 @@ android {
 }
 
 dependencies {
+   // kapt("groupId:artifactId:version")
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.8.0'
     // Core
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -58,8 +60,9 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
     implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
     // RxJava 3
-    implementation 'io.reactivex.rxjava3:rxjava 3.0.13-RC2'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.13-RC2'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.compose.ui:ui:1.0.0-beta05'
     // Tooling support (Previews, etc.)
