--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ android {
 
 dependencies {
    // kapt("groupId:artifactId:version")
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.8.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.9.2'
     // Core
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -82,7 +82,7 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta05'
     implementation 'androidx.compose.runtime:runtime-rxjava2:1.0.0-beta05'
 
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
