--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,9 +69,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.compose.ui:ui:1.0.0-beta05'
-    // Tooling support (Previews, etc.)
+    // Tooling support
     implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta05'
-    // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
+    // Foundation
     implementation 'androidx.compose.foundation:foundation:1.0.0-beta05'
     // Material Design
     implementation 'androidx.compose.material:material:1.0.0-beta05'
